<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateNewRequestPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/txtNewRequest"
        android:fontFamily="@font/montserrat"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="#000"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/txtNumSwipes"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtInputNumSwipes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtInputNumSwipes" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/txtTime"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.175" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/txtMoneyOffer"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/txtInputNumSwipes"
            android:layout_width="168dp"
            android:layout_height="33dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="4dp"
            android:inputType="number"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/txtInputMoneyOffer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/in_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/in_date"
            android:layout_marginTop="44dp"
            android:layout_toEndOf="@+id/in_date"
            android:layout_toRightOf="@+id/in_date"
            android:backgroundTint="@color/red"
            android:text="SELECT DATE"
            app:layout_constraintTop_toBottomOf="@+id/txtInputNumSwipes"
            tools:layout_editor_absoluteX="210dp" />

        <EditText
            android:id="@+id/in_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/in_date"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/in_date" />

        <Button
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_date"
            android:layout_alignStart="@+id/btn_date"
            android:layout_alignLeft="@+id/btn_date"
            android:layout_marginBottom="33dp"
            android:backgroundTint="@color/red"
            android:text="SELECT TIME"
            app:layout_constraintBottom_toTopOf="@+id/txtInputMoneyOffer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/in_time" />

        <EditText
            android:id="@+id/txtInputMoneyOffer"
            android:layout_width="169dp"
            android:layout_height="31dp"
            android:layout_marginTop="168dp"
            android:inputType="numberDecimal"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/txtInputNumSwipes"
            app:layout_constraintTop_toBottomOf="@+id/txtInputNumSwipes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom">
        <Button
            android:id="@+id/btnSubmitRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/montserrat"
            android:paddingHorizontal="60dp"
            android:paddingVertical="10dp"
            android:text="@string/txtSubmitRequest"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>
